* Wed Jan 21 2015 Stefan Schulte <stefan.schulte@taunusstein.net> 1.0.0
- Initial release for puppet forge