@@ -1,2 +1,4 @@
+* Thu Jan 22 2015 Stefan Schulte <stefan.schulte@taunusstein.net> 1.0.1
+- Update metadata.json with tested operating systems
 * Wed Jan 21 2015 Stefan Schulte <stefan.schulte@taunusstein.net> 1.0.0
 - Initial release for puppet forge
